--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material-ui/core": "^4.12.4",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
-    "material-ui": "^0.20.2"
+    "material-ui": "^0.20.2",
+    "nodemon": "^2.0.19"
   }
 }
