--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "react-spring": "^9.5.0"
   },
   "browserslist": {
     "production": [
