--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-animated-checkbox": "^0.1.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
